# MELODY2D-jing

./: CMakeLists.txt  README.md  git常用命令
Code/: BATCHCHAINS.cpp  BATCHCONTOURS.cpp  BATCHEXTRACT.cpp  BATCHFIELDS.cpp  BATCHGRAINS.cpp  BATCHPRINT.cpp  Body.h  CMakeLists.txt  Graphic.h  IO.h  Model.h  Monitoring.h  Proximity.h  Solver.h  Tools.h  main.cpp
Preprocessor/: MELODY.m  MELODYLoadData_fault.m  PlotBodiesStatic.m  plot_force_disp.m  plotcontours.m  test.m
Preprocessor/Distmesh/: distmesh2d_plot.m
Preprocessor/examples/: MELODYLoadData_5000_3_grains.m  MELODYLoadData_Inertia_number.m  MELODYLoadData_contact_test.m  MELODYLoadData_directshear_load_elastic.m  MELODYLoadData_directshear_load_rigid.m  MELODYLoadData_element_test.m  MELODYLoadData_fault.m  MELODYLoadData_uniaxial.m
Preprocessor/src/: ExportDynamic.m  ExportStatic.m  Generate_Random_Surface.m  LoadCVoroDataFile.m  MLS2DWithDerivatives.m  PlotBodiesStatic.m  Preprocessing.m  SetRigidNodesForClosedContour.m  SetRigidNodesForPeriodicContours.m  SetUnstructuredNodesForClosedContour.m  SetUnstructuredNodesForPolygonContour.m  SetUnstructuredNodesForSimpleContours.m  plot_contact.m  plot_force_disp.m  plotcontours.m  test.m  transformCells.m
Preprocessor/test/: test_create_side_function.m  test_fractal_calculate.m
Preprocessor/utilities/: Fractal.m  Get_I_number.m  Get_shock_characteristic_time.m  anaylisgrainfiles.m  cohesidensity_to_nc.m  create_side_function.m  damping_to_restitution.m  dist2A.m  elasticity_to_stiffness.m  fh_line.m  fractal_calculate.m  gen_vel_step.m  generate_fault_particles.m  generate_rough_curve.m  getdata.m  load_voro.m  restitution_to_damping.m  systeminfo.m
melody2d-cuda/include/: Body.h  Graphic.h  IO.h  Model.h  Monitoring.h  Node.h  Proximity.h  Solver.h  Tools.h
